--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,7 +1,6 @@
 .login-container {
     width: 500px;
-    height: 550px;
-    border: 1px solid rgb(209, 174, 104);
+    border: 2px solid rgb(209, 174, 104);
     border-radius: 10px;
     top: 50%;
     left: 50%;
@@ -11,52 +10,87 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    padding: 40px 20px;
 }
 
-.fields-container {
-    width: 80%;
-    height: 90%;
+.form-fields-wrapper {
+    width: 100%;
+    height: 100%;
 
     display: flex;
     justify-content: start;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
-    
+    gap: 35px;
 }
 
-.input-field-container {
+.form-field {
     position: relative;
-    width: 100%;
-    height: 70px;
+    width: 90%;
+    height: 55px;
     border: 1px solid rgb(209, 174, 104);
-    border-radius: 10px;
-    overflow: hidden;
+    border-radius: 5px;
 }
 
-.input-field-container > .input {
+.input-field {
     position: absolute;
     top: 0;
     left: 0;
+    padding-left: 10px;
     width: 100%;
     height: 100%;
-    outline: none;
     border: none;
+    outline: none;
     background-color: transparent;
     color: #fff;
     font-size: 1rem;
-    padding: 10px;
-    z-index: 9999;
 }
 
-.input-field-container > .placeholder {
+.label-field {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: rgba(209, 174, 104, 0.3);
-    align-content: center;
-    padding-left: 10px;
-    transition: 0.3s;
+    top: -13px;
+    left: 10px;
+    color: rgba(209, 174, 104, 0.5);
+    background-color: rgb(27,27,27);
+    padding: 0 3px;
+}
+
+.error-field {
+    position: absolute;
+    bottom: -20px;
+    left: 0px;
+    color: red;
+    font-size: 12px;
+}
+
+input[type = 'submit'] {
+    padding: 10px 20px;
+    background-color: transparent;
+    border: 1px solid rgb(209, 174, 104);
+    outline: none;
+    color: rgb(209, 174, 104);
+    font-weight: 500;
+    font-size: 1rem;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+input[type = 'submit']:hover {
+    background-color: rgb(209, 174, 104);
+    color: #000;
+}
+
+.icon {
+    color: rgb(209, 174, 104);
+    font-size: 1rem;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.icon:hover {
+    color: rgba(209, 174, 104, 0.5);
 }
