--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -65,5 +65,11 @@
 
         <input type="submit" value="submit" />
 
+        <label class="error-field" for="confirmPassword">
+            @if (errorReceived) {
+                Could not create the account
+            }
+        </label>
+
     </div>
 </form>
