added spring security and http basic authentication then shared authentication object among unrelated components

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,30 +1,32 @@
+@if (showLoader) {
+    <div class="loader">
+        <img src="assets/loader-icon.gif" height="300px" width="300px" alt="loader img" />
+    </div>
+}
+
 <form class="login-container" (submit)="handleRegisterForm()" [formGroup]="loginForm">
     <div class="form-fields-wrapper">
 
-        <div class="form-field">
+        <div class="{{errors.emailAddress.message.length > 1 ? 'error-field-field' : 'form-field'}}">
             <input class="input-field" type="text" id="emailAddress" name="emailAddress" autocomplete="off" formControlName="emailAddress"/>
-            <label class="label-field" for="emailAddress">Email Address</label>
+            <label class="label-field" for="emailAddress" [ngStyle]="{'color': errors.emailAddress.message.length > 1 ? 'red' : 'rgba(209, 174, 104, 0.5)'}">Email Address</label>
             <label class="error-field" for="emailAddress">
-                @if (errors.emailAddress.message) {
-                    @for (item of errors.emailAddress.message; track $index) {
-                        {{item}}
-                    }
+                @if (errors.emailAddress.message != '') {
+                    {{errors.emailAddress.message}}
                 }
             </label>
         </div>
 
-        <div class="form-field">
+        <div class="{{errors.password.message.length > 1 ? 'error-field-field' : 'form-field'}}">
             <input #passwordField class="input-field" type='{{showPassword ? "text" : "password"}}' id="password" name="password" autocomplete="off" formControlName="password"/>
-            <label class="label-field" for="password">Password</label>
+            <label class="label-field" for="password" [ngStyle]="{'color': errors.password.message.length > 1 ? 'red' : 'rgba(209, 174, 104, 0.5)'}">Password</label>
             <label class="error-field" for="password">
-                @if (errors.password.message) {
-                    @for (item of errors.password.message; track $index) {
-                        {{item}}
-                    }
+                @if (errors.password.message != '') {
+                    {{errors.password.message}}
                 }
             </label>
-            <i class="icon fa-solid {{showPassword ? 'fa-eye-slash' : 'fa-eye'}}" (click)="controlPasswordVisibility()"></i>
-        </div>
+            <i class="icon fa-solid {{showPassword ? 'fa-eye-slash' : 'fa-eye'}}" [ngStyle]="{'color': errors.password.message.length > 1 ? 'red' : 'rgba(209, 174, 104, 0.5)'}" (click)="controlPasswordVisibility()"></i>
+        </div> 
 
         <input type="submit" value="submit" />
 
