--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,3 +1,20 @@
+.loader {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    z-index: 9999;
+}
+
+.loader img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .login-container {
     width: 500px;
     border: 2px solid rgb(209, 174, 104);
@@ -30,6 +47,14 @@
     width: 90%;
     height: 55px;
     border: 1px solid rgb(209, 174, 104);
+    border-radius: 5px;
+}
+
+.error-field-field {
+    position: relative;
+    width: 90%;
+    height: 55px;
+    border: 1px solid red;
     border-radius: 5px;
 }
 
@@ -93,4 +118,28 @@ input[type = 'submit']:hover {
 
 .icon:hover {
     color: rgba(209, 174, 104, 0.5);
+}
+
+@media screen and (min-width: 401px) and (max-width: 500px) {
+    .login-container {
+        width: 400px;
+    }
+
+    .form-field {
+        height: 45px;
+    }
+
+    input[type = 'submit'] {
+        padding: 7px 10px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .login-container {
+        width: 300px;
+    }
+
+    input[type = 'submit'] {
+        padding: 7px 10px;
+    }
 }
