--- a/frontend/src/app/register/register.component.css
+++ b/frontend/src/app/register/register.component.css
@@ -1,3 +1,20 @@
+.loader {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    z-index: 9999;
+}
+
+.loader img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .register-container {
     width: 500px;
     border: 2px solid rgb(209, 174, 104);
@@ -21,7 +38,7 @@
     justify-content: start;
     align-items: center;
     flex-direction: column;
-    gap: 35px;
+    gap: 45px;
 }
 
 .form-field {
@@ -30,6 +47,10 @@
     height: 55px;
     border: 1px solid rgb(209, 174, 104);
     border-radius: 5px;
+}
+
+.error-field-field {
+    border: 1px solid red;
 }
 
 .input-field {
@@ -92,4 +113,53 @@ input[type = 'submit']:hover {
 
 .icon:hover {
     color: rgba(209, 174, 104, 0.5);
+}
+
+
+
+
+
+@media screen and (min-width: 401px) and (max-width: 500px) {
+    .register-container {
+        width: 400px;
+    }
+
+    .form-field {
+        height: 45px;
+    }
+
+    input[type = 'submit'] {
+        padding: 7px 10px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .register-container {
+        width: 300px;
+    }
+
+    input[type = 'submit'] {
+        padding: 7px 10px;
+    }
+}
+
+
+
+
+@media screen and (max-height: 750px) {
+    .form-field {
+        height: 50px;
+    }
+
+    .error-form-field {
+        height: 50px;
+    }
+
+    .form-fields-wrapper {
+        gap: 30px;
+    }
+
+    input[type = 'submit'] {
+        padding: 7px 10px;
+    }
 }
