--- a/frontend/src/app/menu/menu.component.css
+++ b/frontend/src/app/menu/menu.component.css
@@ -41,3 +41,37 @@
     cursor: pointer;
 }
 
+.user-menu-container {
+    position: relative;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.user-menu {
+    position: absolute;
+    background-color: #010101;
+    width: 150px;
+    top: 48px;
+    left: 0;
+    border-left: 3px solid rgb(209, 174, 104);
+}
+
+.menu-item {
+    width: 100%;
+    height: 40px;
+    color: rgb(209, 174, 104);
+    cursor: pointer;
+    text-transform: uppercase;
+    padding: 25px 10%;
+    display: flex;
+    align-items: center;
+}
+
+.menu-item:hover {
+    background-color: rgb(209, 174, 104);
+    color: #000;
+}
+
+.icon {
+    padding-right: 10px;
+}
