--- a/frontend/src/app/register/register.component.css
+++ b/frontend/src/app/register/register.component.css
@@ -16,7 +16,7 @@
 }
 
 .register-container {
-    width: 500px;
+    width: 900px;
     border: 2px solid rgb(209, 174, 104);
     border-radius: 10px;
     top: 50%;
@@ -35,10 +35,28 @@
     height: 100%;
 
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 45px;
+    gap: 30px;
+}
+
+.columns {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.form-fields-wrapper-column {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .form-field {
@@ -65,6 +83,21 @@
     background-color: transparent;
     color: #fff;
     font-size: 1rem;
+    
+}
+
+#profilePicture::content {
+    align-content: center;
+    color: rgb(209, 174, 104);
+}
+
+#profilePicture::-webkit-file-upload-button {
+    color: #000;
+    background-color: rgb(209, 174, 104);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 3px 10px;
 }
 
 .label-field {
@@ -162,4 +195,9 @@ input[type = 'submit']:hover {
     input[type = 'submit'] {
         padding: 7px 10px;
     }
+}
+
+.registeration-error {
+    color: rgb(255, 0, 0);
+    text-transform: uppercase;
 }
